--- a/InverterController_ver2/platformio.ini
+++ b/InverterController_ver2/platformio.ini
@@ -8,11 +8,18 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:megaADK]
-platform = atmelavr
-board = megaADK
-framework = arduino
+[env]
 monitor_speed = 115200
 lib_deps =
 	paulstoffregen/MsTimer2@^1.1
 	seeed-studio/CAN_BUS_Shield@^2.3.3
+
+[env:megaADK]
+platform = atmelavr
+board = megaADK
+framework = arduino
+
+[env:nucleo_f401re]
+platform = ststm32
+board = nucleo_f401re
+framework = arduino
