--- a/InverterController_ver2/platformio.ini
+++ b/InverterController_ver2/platformio.ini
@@ -19,7 +19,7 @@ platform = atmelavr
 board = megaADK
 framework = arduino
 
-[env:nucleo_f401re]
-platform = ststm32
-board = nucleo_f401re
-framework = arduino
+;[env:uno]
+;platform = atmelavr
+;board = uno
+;framework = arduino
