--- a/InverterController_ver1/platformio.ini
+++ b/InverterController_ver1/platformio.ini
@@ -8,18 +8,9 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-;[env:uno]
-;platform = atmelavr
-;board = uno
-;framework = arduino
-;monitor_speed = 115200
-;lib_deps =
-;	seeed-studio/CAN_BUS_Shield@^2.3.3
-;	paulstoffregen/MsTimer2@^1.1
-
-[env:megaatmega2560]
+[env:uno]
 platform = atmelavr
-board = megaatmega2560
+board = uno
 framework = arduino
 monitor_speed = 115200
 lib_deps =
