--- a/InverterController_ver3/platformio.ini
+++ b/InverterController_ver3/platformio.ini
@@ -12,6 +12,7 @@
 platform = atmelavr
 board = megaatmega2560
 framework = arduino
-lib_deps = 
+monitor_speed = 115200
+lib_deps =
 	seeed-studio/CAN_BUS_Shield@^2.3.3
 	paulstoffregen/MsTimer2@^1.1
