--- a/AMS_Temp_slave/platformio.ini
+++ b/AMS_Temp_slave/platformio.ini
@@ -8,8 +8,15 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:uno]
+;[env:uno]
+;platform = atmelavr
+;board = uno
+;framework = arduino
+;lib_deps = paulstoffregen/MsTimer2@^1.1
+
+[env:pro16MHzatmega328]
 platform = atmelavr
-board = uno
+board = pro16MHzatmega328
 framework = arduino
 lib_deps = paulstoffregen/MsTimer2@^1.1
+monitor_speed = 115200
