--- a/InverterController_ver5/platformio.ini
+++ b/InverterController_ver5/platformio.ini
@@ -8,17 +8,17 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-;[env:uno_r4_minima]
-;platform = renesas-ra
-;board = uno_r4_minima
-;framework = arduino
-;monitor_speed = 115200
-
-[env:megaatmega2560]
-platform = atmelavr
-board = megaatmega2560
+[env:uno_r4_minima]
+platform = renesas-ra
+board = uno_r4_minima
 framework = arduino
 monitor_speed = 115200
-lib_deps = 
-	paulstoffregen/MsTimer2@^1.1
-	seeed-studio/CAN_BUS_Shield@^2.3.3
+
+;[env:megaatmega2560]
+;platform = atmelavr
+;board = megaatmega2560
+;framework = arduino
+;monitor_speed = 115200
+;lib_deps = 
+;	paulstoffregen/MsTimer2@^1.1
+;	seeed-studio/CAN_BUS_Shield@^2.3.3
