--- a/InverterController_ver5/platformio.ini
+++ b/InverterController_ver5/platformio.ini
@@ -13,6 +13,7 @@ platform = renesas-ra
 board = uno_r4_minima
 framework = arduino
 monitor_speed = 115200
+platform_packages = platformio/framework-arduinorenesas-uno@^1.0.4
 
 ;[env:megaatmega2560]
 ;platform = atmelavr
